    REPL input, and inspect output of some core-class objects.

  * Introduce multiline mode by Reline.

  * Show documents when completion.

  * Enable auto indent and save/load history by default.

Net::FTP::

  * Add Net::FTP#features to check available features, and Net::FTP#option to
    enable/disable each of them.  [Feature #15964]

Net::IMAP::

  * Add Server Name Indication (SNI) support.  [Feature #15594]

open-uri::

  * Warn open-uri's "open" method at Kernel.
    Use URI.open instead.  [Misc #15893]

  * The default charset of text/* media type is UTF-8 instead of
    ISO-8859-1.  [Bug #15933]

OptionParser::

  * Now show "Did you mean?" for unknown option.  [Feature #16256]

    test.rb:

      require 'optparse'
      OptionParser.new do |opts|
        opts.on("-f", "--foo", "foo") {|v| }
        opts.on("-b", "--bar", "bar") {|v| }
        opts.on("-c", "--baz", "baz") {|v| }
      end.parse!

    example:

      $ ruby test.rb --baa
      Traceback (most recent call last):
      test.rb:7:in `<main>': invalid option: --baa (OptionParser::InvalidOption)
      Did you mean?  baz
                     bar

Pathname::

  * Delegates 3 arguments from Pathname.glob to Dir.glob to
    accept base: keyword.

Racc::

  * Merge 1.4.15 from upstream repository and added cli of racc.

Reline::

  * New stdlib that is compatible with readline stdlib by pure Ruby and also
    has a multiline mode.

REXML::

  * Upgrade to 3.2.3.
    See https://github.com/ruby/rexml/blob/master/NEWS.md.

RSS::

  * Upgrade to RSS 0.2.8.
    See https://github.com/ruby/rss/blob/master/NEWS.md.

RubyGems::

  * Upgrade to RubyGems 3.1.0.pre3
    See https://github.com/rubygems/rubygems/blob/3.1/History.txt#L3

StringScanner::

  * Upgrade to 1.0.3.
    See https://github.com/ruby/strscan/blob/master/NEWS.md.

=== Compatibility issues (excluding feature bug fixes)

* The following libraries are no longer bundled gems.
  Install corresponding gems to use these features.